// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TowerLocation snapshot when isPortrait matches snapshot when empty 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        buffer
      </div>
    </div>
    <div
      class="location-section disks buffer notcomplete"
    />
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when isPortrait matches snapshot with all disks and not target 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        origin
      </div>
    </div>
    <div
      class="location-section disks origin notcomplete"
    >
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when isPortrait matches snapshot with all disks and target 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        target
      </div>
    </div>
    <div
      class="location-section disks target complete"
    >
      <a
        aria-label="NASA/JPL Space Images"
        class="location-section"
        href="tower-link"
        rel="noreferrer noopener external"
        target="_blank"
      >
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when isPortrait matches snapshot with some disks 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        buffer
      </div>
    </div>
    <div
      class="location-section disks buffer notcomplete"
    >
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when not isPortrait matches snapshot when empty 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section disks buffer notcomplete"
    />
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        buffer
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when not isPortrait matches snapshot with all disks and not target 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section disks origin notcomplete"
    >
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
    </div>
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        origin
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when not isPortrait matches snapshot with all disks and target 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section disks target complete"
    >
      <a
        aria-label="NASA/JPL Space Images"
        class="location-section"
        href="tower-link"
        rel="noreferrer noopener external"
        target="_blank"
      >
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
        <div
          class="disk-wrapper"
          style="height: 0px; width: 0px;"
        >
          TowerDisk
        </div>
      </a>
    </div>
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        target
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerLocation snapshot when not isPortrait matches snapshot with some disks 1`] = `
<DocumentFragment>
  <div
    class="location"
  >
    <div
      class="location-section disks buffer notcomplete"
    >
      <div
        class="disk-wrapper"
        style="height: 0px; width: 0px;"
      >
        TowerDisk
      </div>
    </div>
    <div
      class="location-section name"
    >
      <div
        class="name-text"
      >
        buffer
      </div>
    </div>
  </div>
</DocumentFragment>
`;
